CHATS_SIT/force-app/main/default/objects/T_APPEAL__c.object
<CustomObject>
    <fields>
        <fullName>ACMDN_SPEC__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ACMDN_SPEC</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDE_COUNTY</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipName>T_APPEAL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_FILED_MTHD__c</fullName>
        <label>CDE_FILED_MTHD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00657</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_HRNG_TYPE__c</fullName>
        <label>CDE_HRNG_TYPE</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_APPEAL__c</fullName>
        <label>CDE_TYPE_APPEAL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00670</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_DSPT__c</fullName>
        <label>CDE_TYPE_DSPT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00664</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_RQSTR__c</fullName>
        <label>CDE_TYPE_RQSTR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00654</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_RQ__c</fullName>
        <label>DTE_RQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTLS_DSPTD_ISSUE__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTLS_DSPTD_ISSUE</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDN_AGRMT_FISCAL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_AGRMT_FISCAL</label>
        <referenceTo>T_PROVR_FISCAL_AGREMENT__c</referenceTo>
        <relationshipName>T_APPEAL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_CASE</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipName>T_APPEAL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CORR__c</fullName>
        <label>IDN_CORR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_PROVR</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipName>T_APPEAL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IND_ACMDN_SPEC__c</fullName>
        <label>IND_ACMDN_SPEC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_BYPAS_APPEAL_LEVEL_COUNTY__c</fullName>
        <label>IND_BYPAS_APPEAL_LEVEL_COUNTY</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_CARE_CONTN__c</fullName>
        <label>IND_CARE_CONTN</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_HRNG_ASSTD__c</fullName>
        <label>IND_HRNG_ASSTD</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_INTERP_NEED__c</fullName>
        <label>IND_INTERP_NEED</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_PRSNC_STATE_REQST__c</fullName>
        <label>IND_PRSNC_STATE_REQST</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_RECORD_CURR__c</fullName>
        <label>IND_RECORD_CURR</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RESN_IPV_ALGD__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>RESN_IPV_ALGD</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TXT_CMTS__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>TXT_CMTS</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Appeal</label>
    <nameField>
    	<displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appeals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>